# PollToMVR

./: .gitignore  .pre-commit-config.yaml  README.md  licenserc.toml  packaging.spec  pyproject.toml  run.py
.github/workflows/: generate.yml
tui/: app.css  app.py  artnet.py  artnet_screen.css  config_screen.css  create_mvr.py  llrp.py  messages.py  network.py  quit_screen.css  rdm_search.py  screens.py
tui/gdtf_share/: gdtf.py
tui/share_api_client/: __init__.py
