[project]
name = "PolltoMVR"
version = "0.2.0"
description = "A tool to discover network devices via Art-Net or RDM E1.20 and to save them into [MVR](https://gdtf-share.com/) (My Virtual Rig) scene file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ifaddr>=0.2.0",
    "pymvr>=1.0.4",
    "pyserial>=3.5",
    "requests>=2.32.5",
    "textual>=6.5.0",
    "textual-fspicker>=0.6.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "textual-dev>=1.7.0",
]
